# TREE-3

./: .dir-locals.el  .gitignore  CNAME  darwin-configuration.nix  default.nix  flake.nix  qemu-uefi.nix
.config/emacs/: early-init.el  init.el
.emacs.d/: init.el
.github/workflows/: static.yml
bab/: Cargo.toml  shell.nix
bab/src/: crossref.rs  main.rs
infra/zones/: aziz.fyi.zone  hosts.aziz.fyi.zone
lib/: utils.nix
nodes/: common.nix  default.nix  macbook-pro-m1.nix
nodes/devbox/: blackhole-links.nix  configuration.nix  configuration.nix~  hardware-configuration.nix  ipxe.nix  merged.nix  probabilistic.ru.nix  ssh-iso-boot.nix
nodes/devbox/secrets/: l2tp-dc.yaml
nodes/devbox/uvm/: default.nix
nodes/m1/: macbook-pro-m1.nix
nodes/m1-linux/: configuration.nix  hardware-configuration.nix  iso-boot.nix
nodes/modules/: #sops.nix#  .bind.nix.swp  acme.nix  airsonic.nix  bind.nix  emacs.nix  eris.nix  gonic.nix  jupyter.nix  knot-dns.nix  misc.nix  routing.nix  sops.nix  stumpwm.nix  sway.nix  tailscale.nix  users.nix  znc.nix
nodes/modules/desktop/: default.nix
nodes/modules/router/: default.nix  routing.nix
nodes/overlays/: 10-emacs.nix
nodes/overlays/emacs/: 0002-mac-gui-loop-block-autorelease.patch
nodes/p53/: configuration.nix  hardware-configuration.nix
npins/: sources.json
tools/: genNixPkgsList.sh  nixSearch.sh
users/aziz/: grasp.sh
users/aziz/blog/: SIP.html  az-emacs.html  dft.html  index.html  infra.html  pkg.html  theindex.html
users/aziz/phd-thesis/: .gitignore  100-Introduction.tex  200-Related_work.tex  (+8 more)
www/: index.html
(+37 files in other folders)
